# cognitive-agent

./: LICENSE  README.md  pyproject.toml
src/cognitive_agent/: __init__.py  agent.py
src/tests/: test_agent.py
